Changelog
=========


1.11.0 (unreleased)
-------------------

- create-upgrade: Make sure to quote argument passed to bin/upgrade.
  [lgraf]

- Add a ``create-upgrade`` script which can be installed globally.
  [jone]

- Create a ``bin/upgrade`` script:

  - the ``create`` command creates a upgrade step in the "upgrades" directory.
  - the ``touch`` command can be used for reordering upgrade steps.

  [jone]

- New ``upgrade-step:directory`` directive for registering a directory
  with upgrade steps which are automatically detected and registered.
  [jone]

- Extend the importProfile directive so that a handler can be
  defined. The handler may import the associated upgrade step
  profile with the new method ``self.install_upgrade_profile()``.
  [jone]


1.10.2 (2014-11-19)
-------------------

- Exclude uninstalled products from upgrades view.
  [jone]

- Make upgrades appear in undo form again.
  The transaction note fix in 1.7.4 caused upgrade transaction to not appear in the undo form.
  [jone]


1.10.1 (2014-10-27)
-------------------

- Update upgrade view ordering for root nodes.
  The dependency graph does not define any order for root
  profiles (e.g. included in buildout directly), which causes
  random sorting in the upgrade view for those profiles.
  This change sorts those root profiles by name without changing
  the order of profiles which is depended on.
  [jone]


1.10.0 (2014-08-28)
-------------------

- Wrap step.objects in a SavepointIterator that creates a savepoint every n items.
  [lgraf]


1.9.0 (2014-08-27)
------------------

- Add @@manage-upgrades-plain fallback view for @@manage-upgrades.
  It does not include plone`s main template and thus might be able to render when
  the default view fails for some reason.
  [deiferni]


1.8.0 (2014-08-11)
------------------

- Prevent portal_quickinstaller from picking upgrade-steps instead of the
  default-profile by prefixing the profile-id with 'upgrade_to_' (fix #45)
  [pbauer]
